# rubbi-sh

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  config.go  deps.bzl  go.mod  go.sum  install.sh  main.go  tui.go
.github/workflows/: release.yaml
dotfiles/: .rubbi.minimal.sh  .rubbi.sh
tools/: CHANGELOG.md  bazel.rc  bump-version.sh  status.sh  tag-version.sh
